--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@test137e29b/react-smooth-dnd",
-  "version": "0.12.10",
+  "version": "0.12.11",
   "description": "Drag and Drop library",
   "main": "./dist/index.js",
   "scripts": {
@@ -42,10 +42,10 @@
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-uglify": "6.0.2",
     "typescript": "3.3.3333",
-    "@types/react": "^16.3.0"
+    "@types/react": "18.0.15"
   },
   "peerDependencies": {
-    "react": "^17.0.2"
+    "react": "^18.2.0"
   },
   "dependencies": {
     "@test137e29b/smooth-dnd": "^0.12.10",
