--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@busychild/react-smooth-dnd",
-  "version": "0.12.11",
+  "version": "0.12.13",
   "description": "Drag and Drop library",
   "main": "./dist/index.js",
   "scripts": {
@@ -37,12 +37,12 @@
     "@babel/preset-env": "7.3.4",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "7.3.3",
+    "@types/react": "18.0.15",
     "rollup": "1.4.0",
     "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
     "rollup-plugin-uglify": "6.0.2",
-    "typescript": "3.3.3333",
-    "@types/react": "18.0.15"
+    "typescript": "3.3.3333"
   },
   "peerDependencies": {
     "react": "^18.2.0"
